fix(KMCNG-838): fix layout issues

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,12 +1,18 @@
 @import 'app-theme/_variables.scss';
 @import '../../styles/scss/kmc-logo';
 
-.kLoginContainer {
-  position: absolute;
-  width: 100%;
-  min-height: 100%;
-  flex-flow: column;
+:host {
+  height: 100%;
   display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+}
+
+.kLoginContainer {
+  width: 100%;
+  display: flex;
+  flex: 1 1 auto;
+  align-items: flex-start;
   box-sizing: border-box;
   margin: 0;
   background: $kTertiary;
@@ -14,14 +20,9 @@
 
   .kLoginCenter {
     box-sizing: border-box;
-    display: flex;
-    flex: 1 1 auto;
-    flex-flow: row wrap;
-    margin: 0 -14px;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
+    margin: auto;
+    flex: 0 0 auto;
+    padding: 20px;
 
     .kLoginWindow {
       background-color: white;
@@ -32,7 +33,7 @@
 
       .kLogo {
         margin: 0 auto;
-        width: 386px;
+        width: 100%;
         height: 30px;
         line-height: 32px;
         text-align: center;
